refactoring && bug fix: emoji divs were overlaping chat borders

--- a/client/src/pages/Chat/Messages/_emojiDiv.sass
+++ b/client/src/pages/Chat/Messages/_emojiDiv.sass
@@ -1,5 +1,26 @@
 @import '../../../styles/_main'
 
+.emojiDiv-bottom
+    .emoji
+        height: 17px !important
+        margin: 5px 0 0 0 !important
+        border-right: 1px solid #ecf0f1 !important
+    
+    .emojiContent
+        transform: translate(-50px, 0px)
+    
+    .last-two
+        transform: translate(-50px, -180px)
+    
+.emojiDiv-top
+    .emoji
+        height: 30px !important
+        transform: translate(-10px, 8px) !important
+        cursor: pointer !important
+    
+    .emojiContent
+        transform: translate(0px, -200px)
+
 .emojiDiv
     &:hover > .emojiContent, &:active > .emojiContent,
     .emoji:hover, .emoji:active
@@ -10,23 +31,6 @@
         cursor: pointer
         margin: 0
         padding: 0
-
-    #bottom
-        height: 17px !important
-        margin: 5px 0 0 0 !important
-        border-right: 1px solid #ecf0f1 !important
-    
-    #top
-        height: 30px !important
-        transform: translate(-10px, 8px) !important
-        cursor: pointer !important
-    
-    .top
-        transform: translate(0px, -200px)
-    
-    .bottom
-        // transform: translate(-50px, -32px)
-        transform: translate(-50px, 0px)
 
     .emojiContent
         display: none
