--- a/client/src/pages/Chat/Messages/_messages.sass
+++ b/client/src/pages/Chat/Messages/_messages.sass
@@ -141,6 +141,9 @@
                 border-radius: 5px
                 margin: 0
                 width: fit-content
+            
+            .last-one
+                transform: translate(0, -55px)
 
             .emojis
                 display: flex
